# ragchatbot_demo

./: .flake8  CLAUDE.md  Makefile  frontend-changes.md  pyproject.toml
backend/: ai_generator.py  app.py  search_tools.py  vector_store.py
backend/tests/: SUMMARY.md  TEST_REPORT.md  conftest.py  test_ai_generator.py  test_api_endpoints.py  test_fixes.py  test_integration.py  test_rag_system.py  test_search_tools.py
frontend/: index.html  script.js  style.css
scripts/: format_code.sh  quality_check.sh
test_chroma_db/: chroma.sqlite3
